# IDJ-Tuto-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  copy.bat
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
include/: Alien.hpp  Animation.hpp  Bullet.hpp  CMakeVars.hpp  Camera.hpp  Collision.hpp  EndState.hpp  Face.hpp  Game.hpp  GameObject.hpp  InputManager.hpp  Minion.hpp  Music.hpp  Penguins.hpp  Rect.hpp  Resources.hpp  Sound.hpp  Sprite.hpp  StageState.hpp  State.hpp  StateData.hpp  Text.hpp  TileMap.hpp  TileSet.hpp  Timer.hpp  TitleState.hpp  Vec2.hpp
src/: Alien.cpp  Animation.cpp  Bullet.cpp  Camera.cpp  Collision.cpp  EndState.cpp  Face.cpp  Game.cpp  GameObject.cpp  InputManager.cpp  Minion.cpp  Music.cpp  Penguins.cpp  Rect.cpp  Resources.cpp  Sound.cpp  Sprite.cpp  StageState.cpp  State.cpp  Text.cpp  TileMap.cpp  TileSet.cpp  Timer.cpp  TitleState.cpp  Vec2.cpp  main.cpp
